[package]
name = "lucy"
author = "Umiko Labs <https://github.com/umikolabs>"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }
mercy = "1.1.11"