[package]
name = "mercy-cli"
description = "Mercy CLI is a simple command line interface built on top of the Mercy Rust crate."
version = "0.1.7"
author = "azazelm3dj3d"
edition = "2021"
license = "BSD-2-Clause"
categories = ["cryptography", "encoding"]
keywords = ["hashing", "decode", "encode", "cracking"]
repository = "https://github.com/CatherineFramework/mercy-cli"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
mercy = "1.2.17"
prettytable-rs = "0.10.0"